<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <LinearLayout
        android:id="@+id/instaNGAL"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="InstaNGAL"
            android:textSize="16sp"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instaNGAL"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/instaCRP"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="InstaCRP"
            android:textSize="16sp"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instaCRP"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/instaPSA"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="InstaPSA"
            android:textSize="16sp"
            android:textColor="#000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instaPSA"/>
    </LinearLayout>
</LinearLayout>