<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/sample"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/whats_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_accent_temp2"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="8dp"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:paddingLeft="16dp"
                    android:drawablePadding="-32dp"
                    android:drawableLeft="@drawable/ic_stars"
                    android:textSize="12sp"
                    android:text="@string/whats_new"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/run"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_primary"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="8dp"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:paddingLeft="16dp"
                    android:drawablePadding="-32dp"
                    android:drawableLeft="@drawable/ic_play_circle_filled"
                    android:textSize="12sp"
                    android:text="@string/run"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/tutorial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_accent_temp"
                    android:layout_marginBottom="16dp"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:paddingLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:drawablePadding="-32dp"
                    android:drawableLeft="@drawable/ic_cloud_circle"
                    android:textSize="12sp"
                    android:text="@string/tutorial"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_accent"
                    android:layout_marginBottom="16dp"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:paddingLeft="16dp"
                    android:layout_marginLeft="8dp"
                    android:drawablePadding="-32dp"
                    android:drawableLeft="@drawable/ic_watch_later"
                    android:textSize="12sp"
                    android:text="@string/history"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>